[project]
dynamic = ["dependencies"]
name = "profileme"
dynamic = ["version"]
description = "Create a pyproject.toml file for an existing project."
authors = [
    {name = "Jelle Kuebler", email="jelle.kuebler@kit.edu"},
]
license = {file = "LICENSE"}
readme = "README.md"

classifiers = [
    "Topic :: Software Development"
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.hatch.metadata]
allow-direct-references = true
[tool.setuptools-git-versioning]
enabled = true