[project]
dynamic = ["dependencies", "version"]
name = "profileme"
description = "Create a pyproject.toml file for an existing project."
authors = [
    {name = "Jelle Kuebler", email="jelle.kuebler@kit.edu"},
]
license = {file = "LICENSE"}
readme = "README.md"

classifiers = [
    "Topic :: Software Development"
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]

[tool.hatch.metadata]
allow-direct-references = true
[tool.setuptools-git-versioning]
enabled = true
